# fincafacil

./: .gitignore  ACTIVACION_FASE_37.md  ANALISIS_COMPLETO_PROYECTO.md  ANALISIS_ERRORES_FASE37.md  ANALISIS_MEJORAS_APLICADAS.md  ARQUITECTURA_FINCA_COMPLETADA.md  AUDITORIA_MODULO_ANIMALES.md  AUDITORIA_VALIDACIONES_FASE1.md  BITACORA_COMENTARIOS_MEJORADA.md  BUSINESS_CASE_FINCAFACIL.md  CHANGELOG.md  CIERRE_DEFINITIVO_PROYECTO.md  CIERRE_FASE_CONSOLIDACION.md  COMENZAR_FASE_10.md  COMPLETION_FASE_10_SUMMARY.md  CONSOLIDACION_FINAL_FASES_1-22.md  CORRECCIONES_MODULO_INSUMOS.md  CORRECCION_ANIMALES_NACIMIENTO_COMPRA.md  CORRECCION_ERRORES_CRITICOS.md  DASHBOARD_OPERATIVO_ESPEC.md  DELIVERY_COMPLETE.txt  DELIVERY_README.txt  DEPLOYMENT_CHECKLIST_v2.1.0.md  DIAGNOSTICO_COMBOBOX_FINCAS_RAZAS.md  EMPAQUETAMIENTO_ZIP.txt  ENTREGA.md  ENTREGA_FINAL_FASE_2.md  ESCENARIOS_ESTRATEGICOS_2030.md  ESTADO_COMPLETO_FINAL.txt  ESTADO_FINAL.txt  ESTADO_FINAL_FASES_1_12_VISUAL.md  ESTADO_FINAL_PROYECTO.md  ESTADO_PROYECTO_FASES_1_10.md  ESTRUCTURA_FINAL.md  EXAMPLE_DASHBOARD_WITH_TOUR.py  FASE1_IMPLEMENTACION.md  FASE1_INDICE.md  FASE1_RESUMEN_EJECUTIVO.md  FASE9_0_10_1_AUDITORIA_CONFIGURACION_FINCAS.md  FASE9_0_10_2_MIGRACION_CONFIGURACION_FINCAS.md  (+202 more)
config/: feature_flags.json  tour_ajustes_state.json  tour_global_tour_state.json  version.json
database/: __init__.py  actualizar_db.py  complete_migration.py  conexion.py  conexion_unified.py  connection.py  database.py  fincafacil.db  fincafacil_backup.db  fincafacil_backup_20251109_2035.db  init_database.py  inspect_vendedores.py  (+4 more)
(+591 files in other folders)
